# nlp_ufo_drood

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/processed/: drood_character_by_chapter.csv  drood_character_context_words.csv  drood_character_cooccurrence.csv  drood_character_frequency.csv  drood_character_sentiment_themes.csv  drood_clue_candidates.csv  drood_dickens_comparison.csv  drood_dickens_network_comparison.csv  drood_dickens_plot_progression.csv  drood_dickens_role_patterns.csv  drood_dickens_sentiment_arcs.csv  drood_important_clues.csv  drood_scene_clusters.csv  drood_sentences.csv  drood_suspect_scores.csv  drood_top_terms.csv  pursue_document_text_index.csv  ufo_common_phrases.csv  ufo_entity_counts_by_source.csv  ufo_geographic_trends.csv  ufo_ner_summary.csv  ufo_rare_sightings.csv  ufo_shape_counts.csv  ufo_source_language_comparison.csv  ufo_temporal_trends.csv  ufo_top_terms.csv  ufo_unified.csv
data/reference/: README.md
docs/: ambiguities.md  contradictions_audit.md  data_notes.md  drood_assignment_explained.md  future_upgrades.md  gpu_transformer_run.md  manual_validation.md  plan.md  requirements_checklist.md  summary.md  ufo_revision_plan.md
nlp_ass5/: __init__.py  common.py  drood.py  manual_docs.py  run_all.py  semantic.py  ufo.py
notebooks/: assignment_pipeline.ipynb
outputs/figures/: ufo_geographic_map.html
outputs/reports/: drood_report.md  drood_submission_report.md  manual_archive_extraction.csv  manual_raw_inventory.csv  manual_zip_cleanup.csv  ufo_candidate_matches.csv  (+7 more)
scripts/: render_submission_reports.py
