[project]
name = "nlp-ass5"
version = "0.1.0"
description = "NLP assignment solution scaffold for UFO/UAP reports and The Mystery of Edwin Drood."
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "matplotlib>=3.7",
  "networkx>=3.0",
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "scikit-learn>=1.3",
  "rapidfuzz>=3.6",
  "pdfplumber>=0.10",
  "sentence-transformers>=3.0",
  "spacy>=3.7,<3.9",
  "tabulate>=0.9",
  "Pillow>=10.0",
]

[tool.setuptools]
packages = ["nlp_ass5"]
